# bs-pricer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/: bs_cli.cpp
benchmarks/: micro_bench.cpp
cmake/: deps.cmake
docs/: DESIGN.md  NUMERICS.md  PERF_NOTES.md  ROADMAP.md
include/bs/: bs.hpp  concepts.hpp  greeks.hpp  math.hpp  mc.hpp  numeric_utils.hpp  params.hpp  pricing.hpp  version.hpp
include/bs/detail/: batch.hpp
perf/: NOTES.md  make_flame.sh  run_record.sh  run_stat.sh
src/: batch.cpp  greeks.cpp  math.cpp  mc.cpp  params.cpp  pricing.cpp
tests/: CMakeLists.txt  test_batch_demo.cpp  test_concepts.cpp  test_edgecases.cpp  test_greeks.cpp  test_mc_antithetic.cpp  test_mc_plain.cpp  test_numeric_utils.cpp  test_pmr_mbr.cpp  test_pricing.cpp  test_ranges_ladder.cpp
tests/helpers/: pmr_logging_resource.hpp
